[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Theme Resources/Title_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Theme Resources/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Particles/ParticleBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/spr_title_background.png" type="Texture" id=4]
[ext_resource path="res://src/Theme Resources/UI_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Images/spr_bottom_light_002.png" type="Texture" id=6]
[ext_resource path="res://src/Test Scenes/Stages/Title Screen.gd" type="Script" id=7]
[ext_resource path="res://src/Transitions/TransitionScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Test Scenes/Stages/StageOne.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Glow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.576471, 0.980392, 0.243137, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "ToDoList:

- Find way to create narrative-to-gameplay balance

- reach Stage 14 with Stage 15 as final screen"
}
next_stage = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="ParticleBackground" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.564706, 0.952941, 0.482353, 1 )
position = Vector2( 160, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -38.0
margin_right = 75.0
margin_bottom = 38.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 150.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.207843, 0.607843, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "GREENWALKER"
align = 1

[node name="SelectionMenu" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 150.0
margin_bottom = 71.0
theme = ExtResource( 2 )

[node name="StartSection" type="HBoxContainer" parent="VBoxContainer/SelectionMenu"]
margin_right = 150.0
margin_bottom = 6.0
theme = ExtResource( 2 )
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/SelectionMenu/StartSection"]
margin_left = 65.0
margin_right = 85.0
margin_bottom = 6.0
text = "START"

[node name="OptionSection" type="HBoxContainer" parent="VBoxContainer/SelectionMenu"]
margin_top = 10.0
margin_right = 150.0
margin_bottom = 16.0
theme = ExtResource( 2 )
alignment = 1

[node name="OptionsButton" type="Button" parent="VBoxContainer/SelectionMenu/OptionSection"]
margin_left = 63.0
margin_right = 87.0
margin_bottom = 6.0
text = "OPTION"

[node name="ExitSection" type="HBoxContainer" parent="VBoxContainer/SelectionMenu"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 26.0
theme = ExtResource( 2 )
alignment = 1

[node name="ExitButton" type="Button" parent="VBoxContainer/SelectionMenu/ExitSection"]
margin_left = 67.0
margin_right = 83.0
margin_bottom = 6.0
text = "EXIT
"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -18.0
margin_right = -7.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 5 )
text = "ALPHA : Version 0.00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 160, 95 )
texture = ExtResource( 6 )
color = Color( 0.916375, 0.996128, 0.850558, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D"]
autoplay = "Glow"
playback_speed = 0.3
anims/Glow = SubResource( 1 )

[node name="TransitionScene" parent="." instance=ExtResource( 8 )]

[connection signal="focus_exited" from="VBoxContainer/SelectionMenu/StartSection/StartButton" to="." method="_on_StartButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer/SelectionMenu/StartSection/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_exited" from="VBoxContainer/SelectionMenu/OptionSection/OptionsButton" to="." method="_on_OptionsButton_focus_exited"]
[connection signal="focus_exited" from="VBoxContainer/SelectionMenu/ExitSection/ExitButton" to="." method="_on_ExitButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer/SelectionMenu/ExitSection/ExitButton" to="." method="_on_ExitButton_pressed"]
